--- a/css/style.css
+++ b/css/style.css
@@ -52,13 +52,14 @@ header img#baner:hover {
 }
 
 /* Nav */
+/* Podmenu */
+
 nav {
     width: 100%;
     overflow: hidden;
 }
 
-nav a.menu {
-    /* background-color: darkcyan; */
+nav a.menu{
     background-color: rgb(70, 70, 70);
     display: block;
     float: left;
@@ -68,31 +69,62 @@ nav a.menu {
     text-decoration: none;
     text-align: center;
     font-size: 18px;
-    -webkit-transition: all 0.7s ease;
-    transition: all 0.7s ease;
+    -webkit-transition: all 0.3s ease;
+    transition: all 0.3s ease;
 }
 
-nav a.menu:hover {
+
+ ul.podmenu_project {
+    display: block;
+    /* width: 15.625rem; */
+    width: 250px;
+    margin-top: 51px;
+    margin-left: 250px;
+    float: left;
+    text-align: center;
+    visibility: hidden;
+    position: absolute;
+}
+nav ul.podmenu_project li{
+    background-color: rgb(70, 70, 70);
+    display: block;
+    width: 100%;
+    float: left;
+    padding: 15px 30px;
+    -webkit-transition: all 0.3s ease;
+    transition: all 0.3s ease;
+}
+nav ul.podmenu_project li a{
+    text-decoration: none;
+    color: white;
+    width: inherit;
+    font-size: 18px;
+}
+
+nav a.menu:hover,
+nav ul.podmenu_project li:hover {
     background-color: crimson;
     cursor: pointer;
+}
+
+#project_menu_item:hover + .podmenu_project,
+#project_menu_item:active + .podmenu_project,
+#project_menu_item:focus + .podmenu_project,
+.podmenu_project:hover,
+.podmenu_project:active,
+.podmenu_project:focus {
+    visibility: visible;
 }
 
 nav a.active {
     background-color: crimson;
 }
 
-/* a.podmenu {
-    background-color: darkcyan;
-    display: block;
-    float: left;
-    width: 25%;
-    color: white;
-    text-decoration: none;
-    text-align: center;
-    -webkit-transition: all 0.7s ease;
-    transition: all 0.7s ease;
-    visibility: hidden;
-} */
+
+
+
+
+
 
 /* Ogólne article*/
 article {
@@ -405,10 +437,24 @@ footer h6 {
 
 /* Responsywność */
 
+@media(max-width:1012px) {
+    ul.podmenu_project {
+        width: 25%;
+        margin-left: 25%;
+    }
+}
+
 @media (max-width:800px) {
     nav a.menu {
         width: 50%;
         font-size: 17px;
+    }
+
+    ul.podmenu_project {
+        width: 50vw;
+        margin-left: 50vw;
+        font-size: 17px;
+        margin-top: 47px;
     }
 
     article h1{
@@ -460,6 +506,13 @@ footer h6 {
     nav a.menu {
         width: 100%;
         font-size: 16px;
+    }
+
+    ul.podmenu_project {
+        width: 100vw;
+        margin-left: 0vw;
+        font-size: 16px;
+        margin-top: 46px;
     }
     
     article h1{
